--- a/paper/cos424_homework_example.tex
+++ b/paper/cos424_homework_example.tex
@@ -9,7 +9,7 @@
 \usepackage{bm,bbm}
  \usepackage{amssymb}
  \usepackage{float}
- \title{Classification of Review Sentiments}
+ \title{Fragile Families Challenge}
 
 \author{
 Andrew Or\\
@@ -32,20 +32,40 @@ Princeton University \\
 
 \begin{abstract}
 
-[WRITE ME] Customer sentiment is a good prediction of business value. Amazon and many other e-commerce websites rely on reviews to organically filter out unwanted or defective products. While the rating associated with each review is important, the content of the review is also a significant indication of customer interest or lack thereof. In this paper, we analyze sentiments expressed in the text of each review and explore the relationship between these sentiments and the associated rating. We use techniques in text analysis to extract and select features from the dataset and fit the data to a number of classification models. We evaluate these methods on 10,000 biased reviews taken from the Multi-Domain Sentiment Dataset \cite{largedataset}, which comprises of product reviews collected from Amazon.com across many product types.
+This paper describes our submission to the Fragile Families Challenge \cite{ffc}, an effort that applies techniques in predictive modeling and causal inference to interviews conducted with disadvantaged families. The goal of the project is to improve the lives of children in these families by identifying underlying patterns in the answers given by the families. In this work, we use regression and classification methods to predict the values of six key attributes: GPA, grit, material hardship, eviction, layoff, and job training. Because of the abundance of invalid entries in the data, feature selection plays a crucial role in our effort.
 
 \end{abstract}
 \section{Introduction}
 
-Sentiment analysis is a common technique used by many companies to gain insight into their users. In the context of e-commerce, sentiments are usually hidden in the product reviews. In Amazon's case, for instance, each review is associated with a five-star rating and a text blob justifying the user's decision on the rating. Other customers then use average ratings to judge whether their purchases will be fruitful.
+The Fragile Families and Child Wellbeing Study (FFCWS) \cite{ffcws} is an academic collaboration that follows around 5,000 urban families in the United States and collects information about how their social environments change over time. Interviews were first conducted shortly after the birth of the family's child between 1998 and 2000, then were conducted again when the child was age one, three, five, nine, and fifteen. Because of the goal is to understand the difficulty face by disadvantaged families, non-marital births are overrepresented (roughly three-quarters of all births) in the study.
 
-The problem with analyzing ratings alone is that ratings are highly subjective. A product with mediocre ratings may still be desirable if, for example, the product has different sizes and many of the low ratings were given because the product did not fit the buyer. By contrast, the text associated with each review contains much more information than just a number. Certain words, such as 'amazing' and 'brilliant', are often strongly correlated with positive feedback. In addition to tokenized words, n-grams are often also of interest because the sentiments associated with certain phrases, such as 'not impressed', are different from those associated with each individual word in the phrase.
+The data collected in this study has been used by academic papers published in many journals since then \cite{ffc_publications}. Insights derived from this data are shared with policy makers through the Future of Children \cite{foc}, a collaboration between the Woodrow Wilson School of Public and International Affairs at Princeton University and the Brookings Institution.
 
-In this paper, we model the reviews using a bag-of-words representation and evaluate the accuracy of four different classification methods: Bernoulli naive Bayes, multinomial naive Bayes, decision trees, and random forest. We extracted bigrams in addition to individual word tokens as our features and selected features with low Chi-squared score. To account for potential skew in the input data, we used $k$-fold cross validation to split the data into different permutations of train and test sets. The metrics we used for evaluation include accuracy, precision, recall, the F1 score, and the area under the ROC curve.
+The Fragile Families Challenge is an open challenge for data scientists to apply machine learning and statistical methods to the data collected in this study. The challenge aims to use ensemble methods on the best models submitted to discover factors correlated with children beating the odds.
 
-Additionally, we implemented our own custom Bernoulli naive Bayes and multinomial naive Bayes from scratch in python and compared their performance against existing implementations. All source code can be found at \cite{myrepo}.
+In this paper, we propose our solution to the Fragile Families Challenge. We modeled continuous labels and binary labels separately, using regression methods for the former and classification methods for the latter. The regression methods we evaluated are:
+
+\begin{enumerate}
+\item Linear Regression with Lasso Regularization
+\item Support Vector Regression
+\item Random Forest Regression
+\end{enumerate}
+and the classifiers we evaluated are:
+\begin{enumerate}
+\item Bernoulli Naive Bayes Classifier
+\item Multinomial Naive Bayes Classifier
+\item K-Nearest Neighbors Classifier
+\item Random Forest Classifier
+\item Gradient Boosting Classifier
+\end{enumerate}
+
+We used the \texttt{sklearn} implementation of all of the above regression and classification methods. The main metrics we used in our evaluation are the coefficient of determination (also known as the $R^2$ score) for continuous labels and accuracy for binary labels. In both cases, we found that Random Forest performs the best. To account for the abundance of missing or invalid values in the dataset, we experimented with various feature selection and imputation techniques, as we discuss next.
+
+All source code is available on Github at \cite{myrepo}.
 
 \section{Dataset}
+
+[TODO: WRITE ME]
 
 We used two datasets in this experiment. The first is the Sentiment Labelled Sentences Data Set \cite{smalldataset}, which consists of 3,000 labelled sentences extracted from reviews from IMDB, Amazon, and Yelp. There are 500 positive and 500 negative sentences from each of the websites and no neutral sentences. This dataset was used for evaluating a classification method that works around the lack of instance labels by exploring instance-level similarity \cite{individuallabel}.
 
@@ -55,13 +75,19 @@ The reasons for using this second dataset are twofold. First, it is much larger 
 
 \section{Data processing}
 
+[TODO: WRITE ME]
+
 Raw word tokens are not suitable as features for several reasons. First, some words are used only very rarely and do not actually convey any sentiment. These could be words that are highly specific to the user or simply typos. Second, many words have multiple forms that are semantically equivalent. Third, analyzing individual word tokens misses semantics expressed through phrases or negation. Thus, feature extraction and selection are both conducive to a feature set more representative of the underlying sentiments expressed by the users.
 
 \subsection{Feature extraction}
 
+[TODO: WRITE ME]
+
 We used the NLTK library to tokenize, lower case, lemmatize and stem each word using the Porter stemming methods. In addition to individual word tokens, we also include bigrams in our bag of "words" representation. Each entry in our feature vector then is the number of times each "word" appears in a document.
 
 \subsection{Feature selection}
+
+[TODO: WRITE ME]
 
 Without any feature selection, the number of features extracted this way is 11252 for the smaller dataset and 166566 for the larger dataset. Especially in the latter case, classifying on this many features is prohibitively expensive and prone to noise.
 
@@ -76,6 +102,8 @@ where $O_{ij}$ is the observed count and $E_{ij}$ is the expected count. This qu
 We experimented with different values of $k$ depending on the dataset. For the smaller dataset, we used $k = 463$, which throws approximately 10\% of the remaining features after removing rare words and stop words. For the larger dataset, we used $k = 4000$, which throws about around 40\% of the remaining features.
 
 \section{Classification}
+
+[TODO: WRITE ME]
 
 We trained four different models using this set of features: Bernoulli naive Bayes, multionmial naive Bayes, decision trees, and random forests. In this section, we will discuss random forests in detail.
 
@@ -111,9 +139,13 @@ The motivation behind combining the results of many decision trees is that singl
 
 \section{Evaluation}
 
+[TODO: WRITE ME]
+
 We used implementations in the \texttt{scikit-learn} \cite{scikitlearn} library for each of the classification schemes described above. Additionally, as a thought experiment, we implemented our own Bernoulli naive Bayes and multinomial naive Bayes classifiers from scratch in python and compared our results against implementations in \texttt{scikit-learn}. To enhance the robustness and generality of each of our models, we used $k$-fold cross validation with $k=5$.
 
 \subsection{Metrics}
+
+[TODO: WRITE ME]
 
 In addition to raw accuracy, we evaluated each of the classification methods using a number of standard classification metrics.
 \begin{align*}
@@ -127,6 +159,8 @@ These additional metrics were chosen because the raw accuracy does not contain a
 
 \subsection{Hyperparameter tuning}
 
+[TODO: WRITE ME]
+
 The default parameters of the decision tree and random forest classifiers in \texttt{scikit-learn} did not yield good accuracy. Thus, for these models, we experimented with different sets of hyperparameters by trial and error. More specifically, the parameter grid we explored was:
 \begin{align*}
 &\texttt{min\textunderscore leaf\textunderscore samples}: 1, 10, 100\\
@@ -136,6 +170,8 @@ The default parameters of the decision tree and random forest classifiers in \te
 where last parameter is for random forest only. We chose to tune \texttt{min\textunderscore leaf\textunderscore samples} because the default was 1, which led to many splits that were overly specific to the training set. Similarly, tuning \texttt{max\textunderscore features} reduces the chance of overfitting. Using more trees by increasing \texttt{n\textunderscore estimators} further randomizes the training, which should lead to lower generalization errors. In our experiments, we found that the best hyperparameters to use are $\texttt{min\textunderscore leaf\textunderscore samples} = 1, \texttt{max\textunderscore features} = 0.9, \texttt{n\textunderscore estimators} = 100$ for the smaller dataset and $\texttt{min\textunderscore leaf\textunderscore samples} = 10, \texttt{max\textunderscore features} = 0.9, \texttt{n\textunderscore estimators} = 100$ for the larger dataset.
 
 \subsection{Results}
+
+[TODO: WRITE ME]
 
 \begin{table}[htbp]
 \small
@@ -171,6 +207,8 @@ This example is potentially confusing because it contains many words that are st
 
 \section{Conclusion}
 
+[TODO: WRITE ME]
+
 We evaluated four different classification methods on two datasets of different sizes. We found that the multinomial naive Bayes classifier achieved highest accuracy, precision and recall. Based on similar studies, we suspect that the random forest classifier could achieve better results with more trees, more careful hyperparameter tuning, and larger datasets. It may also be worthwhile to investigate other measures of information gain, such as the gini impurity.
 
 Another future direction is to generalize this classification to multiple classes, one for each star (out of five). Preliminary work from this project demonstrated that it is much more difficult to achieve high accuracy in this task, however, since ratings are highly subjective to the user.
@@ -178,19 +216,19 @@ Another future direction is to generalize this classification to multiple classe
 \begin{thebibliography}{}
 
 \bibitem{myrepo}
-https://github.com/andrewor14/sentimentanalysis
+https://github.com/andrewor14/ffc
 
-\bibitem{smalldataset}
-Sentiment Lablled Sentences: https://archive.ics.uci.edu/ml/datasets/Sentiment+Labelled+Sentences
+\bibitem{ffc}
+Fragile Families Challenge: http://www.fragilefamilieschallenge.org/
 
-\bibitem{largedataset}
-Multi-Domain Sentiment Dataset: http://www.cs.jhu.edu/~mdredze/datasets/sentiment/
+\bibitem{ffcws}
+Fragile Families and Child Wellbeing Study: http://www.fragilefamilies.princeton.edu/
 
-\bibitem{domainadaptation}
-Blitzer, John, Mark Dredze, and Fernando Pereira. "Biographies, bollywood, boom-boxes and blenders: Domain adaptation for sentiment classification." ACL. Vol. 7. 2007.
+\bibitem{ffc_publications}
+Fragile Families publications: http://crcw.princeton.edu/publications/publications.asp
 
-\bibitem{learningbounds}
-Blitzer, John, et al. "Learning bounds for domain adaptation." Advances in neural information processing systems. 2008.
+\bibitem{foc}
+Future of Children: http://www.futureofchildren.org/
 
 \bibitem{randomforest}
 Breiman, Leo. "Random forests." Machine learning 45.1 (2001): 5-32.
