--- a/paper/cos424_homework_example.tex
+++ b/paper/cos424_homework_example.tex
@@ -284,6 +284,11 @@ We evaluated continuous variable predictions using the $R^2$ coefficient of dete
 
 In addition to accuracy, we evaluated boolean variable predictions with precision, recall, and F1 scores. The F1 score is the harmonic mean of precision and recall, and is there greater when both precision and recall are greater.
 
+\begin{table}[H]
+  \begin
+\end{table}
+
+
 [TODO: WRITE ME]
 
 % \begin{table}[htbp]
