--- a/paper/cos424_homework_example.tex
+++ b/paper/cos424_homework_example.tex
@@ -283,27 +283,64 @@ We evaluated continuous variable predictions using the $R^2$ coefficient of dete
 In addition to accuracy, we evaluated boolean variable predictions with precision, recall, and F1 scores. The F1 score is the harmonic mean of precision and recall, and is there greater when both precision and recall are greater.
 
 \begin{table}[H]
-  \centering
-  \begin{tabular}{| c | c | c | c | c | c |}
-    \hline
-    ~ & BNB & MNB & KNN & RFC & GBC \\
-    Accuracy & 0.761 & 0.584 & 0.725 & 0.765 & 0.679 \\
-    Precision & 0.040 & 0.244 & 0.253 & 0.000 & 0.204 \\
-    Recall & 0.003 & 0.362 & 0.085 & 0.000 & 0.130 \\
-    F1 & 0.005 & 0.285 & 0.126 & 0.000 & 0.157
-  \end{tabular}
-  \caption{Evaluation of different models for binary classification}
-  \label{tab:boolresults}
+  \begin{minipage}{0.30\textwidth}
+    \centering
+    \begin{tabular}{| c | c | c | c |}
+      \hline
+      ~ & LRL & SVR & RFR \\ \hline
+      $R^2$ & 0.063 & 0.123 & 0.157 \\
+      \hline
+    \end{tabular}
+    \caption{Evaluation of different models for continuous regression of \texttt{gpa}}
+    \label{tab:contresults}
+  \end{minipage}%
+  \hfill
+  \begin{minipage}{0.60\textwidth}
+    \centering
+    \begin{tabular}{| c | c | c | c | c | c |}
+      \hline
+      ~ & BNB & MNB & KNN & RFC & GBC \\ \hline
+      Accuracy & 0.761 & 0.584 & 0.725 & 0.765 & 0.679 \\
+      Precision & 0.040 & 0.244 & 0.253 & 0.000 & 0.204 \\
+      Recall & 0.003 & 0.362 & 0.085 & 0.000 & 0.130 \\
+      F1 & 0.005 & 0.285 & 0.126 & 0.000 & 0.157 \\
+      \hline
+    \end{tabular}
+    \caption{Evaluation of different models for binary classification of \texttt{jobTraining}}
+    \label{tab:boolresults}
+  \end{minipage}
 \end{table}
 
-\begin{table}
+% \begin{table}[H]
+%   \centering
+%   begin{tabular}{| c | c | c | c | c | c |}
+%     \hline
+%     ~ & BNB & MNB & KNN & RFC & GBC \\ \hline
+%     Accuracy & 0.761 & 0.584 & 0.725 & 0.765 & 0.679 \\
+%     Precision & 0.040 & 0.244 & 0.253 & 0.000 & 0.204 \\
+%     Recall & 0.003 & 0.362 & 0.085 & 0.000 & 0.130 \\
+%     F1 & 0.005 & 0.285 & 0.126 & 0.000 & 0.157 \\
+%     \hline
+%   \end{tabular}
+%   \caption{Evaluation of different models for binary classification of \texttt{jobTraining}}
+%   \label{tab:boolresults}
+% \end{table}
 
-% \item Bernoulli Naive Bayes Classifier (BNB)
-% \item Multinomial Naive Bayes Classifier (MNB)
-% \item K-Nearest Neighbors Classifier (KNN)
-% \item Random Forest Classifier (RFC)
-% \item Gradient Boosting Classifier (GBC)
+% \begin{table}[H]
+%   \centering
+%   \begin{tabular}{| c | c | c | c |}
+%     \hline
+%     ~ & LRL & SVR & RFR \\ \hline
+%     $R^2$ & 0.063 & 0.123 & 0.157 \\
+%     \hline
+%   \end{tabular}
+%   \caption{Evaluation of different models for continuous regression of \texttt{gpa}}
+%   \label{tab:contresults}
+% \end{table}
 
+% \item Linear Regression with Lasso Regularization (LRL)
+% \item Support Vector Regression (SVR)
+% \item Random Forest Regression (RFR)
 
 [TODO: WRITE ME]
 
